# metis

./: CMakeLists.txt
cmake/: metisConfig.cmake.in
src/GKlib/: CMakeLists.txt
src/include/: metis.h.in
src/libmetis/: CMakeLists.txt
